Source code cleanup